Added very basic css foundation

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   <title>Guidr</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="..\css\styles.css">
 
 </head>
 
@@ -29,6 +29,7 @@
         <section class="bottom-section">
             "I'm a bottom section"
         </section>
+    </div>
         <footer>
             <nav>
                 <a href="#">Home</a>
@@ -39,7 +40,7 @@
             <div class="rightsReserved">
             </div>
         </footer>
-    </div>
+    
 
 </body>
 </html>
