--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Guidr</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="..\css\styles.css">
+  <link rel="stylesheet" href="..\css\index.css">
 
 </head>
 
@@ -40,7 +40,7 @@
             <div class="rightsReserved">
             </div>
         </footer>
-    
+
 
 </body>
 </html>
