LESS implementation expanded

--- a/index.html
+++ b/index.html
@@ -12,22 +12,28 @@
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Sign Up</a>
-        <a href="#">Log In</a>
-    </nav>
+    <script src="https://kit.fontawesome.com/406ea8cee0.js" crossorigin="anonymous"></script>
+    <div class="nav-container">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Sign Up</a>
+            <a href="#">Log In</a>
+            <img src="images/logo.png">
+        </nav>
+    </div>
     <div class="container">
         <section class="header">
-            "I'm a header"
+            <h1>Welcome to Guidr!</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, quas numquam incidunt porro architecto autem ea voluptatum voluptatibus suscipit voluptates necessitatibus nisi delectus fuga dicta nam vel reprehenderit quae inventore!</p>
         </section>
         <section class="middle-section">
-            "I'm a middle section"
+            <h1>"I'm a middle section"</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, quos asperiores delectus numquam doloremque rem nulla. Nobis non labore aperiam voluptate eius facere magnam quos sequi dolores, incidunt, delectus dolorum.</p>
         </section>
         <section class="bottom-section">
-            "I'm a bottom section"
+            <h1>"I'm a bottom section"</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat illum fugit deserunt id autem. Nobis similique in voluptatem, odio cupiditate molestiae, recusandae facere quibusdam perspiciatis ipsum sequi suscipit id officiis.</p>
         </section>
     </div>
         <footer>
