finished about page with fillers

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
  <body>
 
     <!-- One -->
-    <section>
+    <section class="one">
             <div>
                 <img class="creator-pic" src="images\michael.jpg" alt="" />
                 <a href="#" class="special">Michael Martin- Bio</a>
@@ -50,7 +50,7 @@
 </section>
 
     <!-- Two -->
-    <section>
+    <section class="two">
             <div class="content">
                 <h2 class="major">Itinerant</h2>
                 <p>AS a Company we are here to bring our customers and clients the best of quality. We strive to have
@@ -67,7 +67,7 @@
     </section>
 
     <!-- Three -->
-    <section>
+    <section class="three">
             <div>
                 <img class="creator-pic" src="images\LL.jpg" alt="" />
                 <a href="#" class="special">Loralie Flint- Bio</a>
@@ -84,7 +84,7 @@
     </section>
 
     <!-- Four -->
-    <section>
+    <section class="four">
         
             <div class="content">
                 <h2 class="major">Travel Buff</h2>
@@ -104,7 +104,7 @@
     </section>
 
     <!-- Five -->
-    <section>
+    <section class="five">
             <div>
                <img class="creator-pic" src="images\ant her.jpg" alt="" />
                <a href="#" class="special">Anthony Hernandez- Bio</a>
@@ -172,7 +172,7 @@
                 <input type="email" name="email" id="email" />
             </div>
             <div class="field">
-                <label for="message">Message</label>
+                <label for="message">Msg.-</label>
                 <textarea name="message" id="message" rows="4"></textarea>
             </div>
         </div>
