Mobile mode added

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 <body>
     <script src="https://kit.fontawesome.com/406ea8cee0.js" crossorigin="anonymous"></script>
-    <div class="nav-container">
+    <div class="navContainer">
         <nav>
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Sign Up</a>
             <a href="#">Log In</a>
-            <img src="images/logo.png">
         </nav>
+        <img src="images/logo.png">
     </div>
     <div class="topContainer">
         <img class="headerImage" src="images\image4.jpg">
@@ -36,7 +36,7 @@
         </section>
         <section class="middle-section">
             <div class="middleContainer">
-                <h1>An answer to wanderlust.</h1>
+                <h1>Your answer to wanderlust</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, quos asperiores delectus numquam doloremque rem nulla. Nobis non labore aperiam voluptate eius facere magnam quos sequi dolores, incidunt, delectus dolorum.</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim tempora maxime explicabo, blanditiis itaque quasi architecto mollitia at perspiciatis, cumque optio impedit consequatur natus, officia delectus. Repellat ducimus tempora odio.</p>
             </div>
@@ -45,24 +45,28 @@
         <section class="bottom-section">
             <img src="images/image3.jpg">
             <div class="bottomContainer">
-                <h1>Connect with others that walk the same paths.</h1>
+                <h1>Find your path</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat illum fugit deserunt id autem. Nobis similique in voluptatem, odio cupiditate molestiae, recusandae facere quibusdam perspiciatis ipsum sequi suscipit id officiis.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quasi animi, dolor doloribus tenetur maiores dolore quidem ratione nesciunt sequi aperiam, earum saepe facilis veritatis placeat repudiandae aliquid reiciendis distinctio.</p>
             </div>
         </section>
-        <div class="quote"><h1>"Not all those who wander are lost."</h1>
+        <div class="quote">
+            <img src="images/image5.jpg">
+            <h1>"Not all those who wander are lost."</h1>
         </div>
     </div>
         <footer>
-            <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Sign Up</a>
-                <a href="#">Log In</a>
+            <div class="footerContainer">
+                <nav>
+                    <a href="#">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Sign Up</a>
+                    <a href="#">Log In</a>
+                </nav>
                 <img src="images/logo.png">
-            </nav>
+            </div>
             <div class="rightsReserved">
-                Copyright 2019 Guidr
+                Copyright © 2019 Guidr
                 All Rights Reserved.
             </div>
         </footer>
