--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <script src="https://kit.fontawesome.com/406ea8cee0.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/406ea8cee0.js" crossorigin="anonymous"></script> -->
     <div class="navContainer">
         <nav>
             <a href="#">Home</a>
@@ -30,15 +30,15 @@
             <h1>Welcome to Guidr!</h1>
             <div class="headerContainer">
                 <img src="images\image1.jpg">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, quas numquam incidunt porro architecto autem ea voluptatum voluptatibus suscipit voluptates necessitatibus nisi delectus fuga dicta nam vel reprehenderit quae inventore!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga quo error, inventore explicabo enim excepturi, nisi perferendis qui maiores beatae illo voluptate ab porro eum odit accusantium architecto? Voluptatem, quae.</p>
+                <h2>Do you seek new paths? New portals? Scenery away from the ordinary?</h2>
+                <p>Whether it's outdoors or urban exploration-- Guidr has everything you need: A treasure trove of exploration and sights unseen, for the modern adventurer.</p>
             </div>
         </section>
         <section class="middle-section">
             <div class="middleContainer">
                 <h1>Your answer to wanderlust</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, quos asperiores delectus numquam doloremque rem nulla. Nobis non labore aperiam voluptate eius facere magnam quos sequi dolores, incidunt, delectus dolorum.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim tempora maxime explicabo, blanditiis itaque quasi architecto mollitia at perspiciatis, cumque optio impedit consequatur natus, officia delectus. Repellat ducimus tempora odio.</p>
+                <p>Guidr is a new social media platform that allows users to create their Outdoor Resume of all travels, trips, trails, and tracks. </p>
+                <p>Our Outdoor Resume is a digital passport that allows users to become both guide and follower: Sharing their travels and locations. This sharing allows fellow adventurers to find new destinations and locations, across the globe.</p>
             </div>
             <img src="images/image2.jpg">
         </section>
