--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
             
             <div>
                 <img class="creator-pic" src="images\received_1367078890115453.jpeg" alt="" />
-                <a href="#" class="special">Jarvis Black- Bio</a>
+                <a href="Jarvis Black- Bio.html" class="special">Jarvis Black- Bio</a>
             </div>
     
     </section>
