A few minor adjustments, and merged code.
Co-authored-by: Jarvis Black <usnblack@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <title>Guidr</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://kit.fontawesome.com/406ea8cee0.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="..\css\index.css">
 
 </head>
 
 <body>
-    <!-- <script src="https://kit.fontawesome.com/406ea8cee0.js" crossorigin="anonymous"></script> -->
     <div class="navContainer">
         <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
             <a href="#">Sign Up</a>
             <a href="#">Log In</a>
         </nav>
@@ -31,11 +31,13 @@
             <div class="headerContainer">
                 <img src="images\image1.jpg">
                 <h2>Do you seek new paths? New portals? Scenery away from the ordinary?</h2>
+                <i class="far fa-compass"></i>
                 <p>Whether it's outdoors or urban exploration-- Guidr has everything you need: A treasure trove of exploration and sights unseen, for the modern adventurer.</p>
             </div>
         </section>
         <section class="middle-section">
             <div class="middleContainer">
+                <i class="fas fa-map-marked-alt"></i>
                 <h1>Your answer to wanderlust</h1>
                 <p>Guidr is a new social media platform that allows users to create their Outdoor Resume of all travels, trips, trails, and tracks. </p>
                 <p>Our Outdoor Resume is a digital passport that allows users to become both guide and follower: Sharing their travels and locations. This sharing allows fellow adventurers to find new destinations and locations, across the globe.</p>
@@ -45,9 +47,11 @@
         <section class="bottom-section">
             <img src="images/image3.jpg">
             <div class="bottomContainer">
+                <i class="fas fa-hiking"></i>
                 <h1>Find your path</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat illum fugit deserunt id autem. Nobis similique in voluptatem, odio cupiditate molestiae, recusandae facere quibusdam perspiciatis ipsum sequi suscipit id officiis.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quasi animi, dolor doloribus tenetur maiores dolore quidem ratione nesciunt sequi aperiam, earum saepe facilis veritatis placeat repudiandae aliquid reiciendis distinctio.</p>
+                <p>Browse hundreds of locations from the comfort of your home or on your favorite mobile device to plot your next destination. </p>
+                <p>Make new friends and companions, and see where they've explored. Guidr allows you to explore the same places your friends have excursioned.</p>
+                <p>The sky is the limit.</p>
             </div>
         </section>
         <div class="quote">
@@ -58,8 +62,8 @@
         <footer>
             <div class="footerContainer">
                 <nav>
-                    <a href="#">Home</a>
-                    <a href="#">About</a>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
                     <a href="#">Sign Up</a>
                     <a href="#">Log In</a>
                 </nav>
