--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="#">Sign up</a>
-            <a href="#">Log in</a>
+            <a href="https://guidr-flame-omega.now.sh/signUp">Sign up</a>
+            <a href="https://guidr-flame-omega.now.sh/">Log in</a>
             <a href="index.html"><img src="images\logo.png" alt="logo"></a>
         </nav>
 
