--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="#">Sign Up</a>
-            <a href="#">Log In</a>
+            <a href="https://guidr-flame-omega.now.sh/signUp">Sign Up</a>
+            <a href="https://guidr-flame-omega.now.sh/">Log In</a>
         </nav>
         <img src="images/logo.png">
     </div>
