meta description updated

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>Guidr</title>
-  <meta name="description" content="The HTML5 Herald">
+  <meta name="description" content="Guidr, a social media tool for seeking trips, trails, and travels">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://kit.fontawesome.com/406ea8cee0.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="..\css\index.css">
